data/cloudformation_collected_templates_new/template_17788_template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: "Creates EC2 resource for Stelligent-U Topic 4: VPC Practice 4.1.4"
Parameters: 
  KeyPairName:
    Description: 'Name of key pair to use for instance access'
    Type: String
    Default: ''
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
Resources: 
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyPairName
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      Monitoring: false
      SubnetId: !ImportValue bgar-lab-subnet-id
      SecurityGroupIds:
        - !Ref EC2SCG
      Tags: 
        - Key: user
          Value: brandon.garcia.labs
        - Key: stelligent-u-lesson
          Value: '4.1'
        - Key: stelligent-u-lab
          Value: '4.1.1'
  PrivateEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyPairName
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      Monitoring: false
      SubnetId: !ImportValue bgar-lab-private-subnet-id
      SecurityGroupIds:
        - !Ref PrivateEC2SCG
      Tags: 
        - Key: user
          Value: brandon.garcia.labs
        - Key: stelligent-u-lesson
          Value: '4.1'
        - Key: stelligent-u-lab
          Value: '4.1.1'
  EIP:
    Type: AWS::EC2::EIP
    Properties: 
      Domain: vpc
      InstanceId: !Ref EC2Instance
      Tags: 
        - Key: user
          Value: brandon.garcia.labs
        - Key: stelligent-u-lesson
          Value: '4.1'
        - Key: stelligent-u-lab
          Value: '4.1.1'
  EIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties: 
      AllocationId: !GetAtt EIP.AllocationId
      InstanceId: !Ref EC2Instance
  EC2SCG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: bgar-stelu-l-415
      GroupDescription: 'bgar stelu sg'
      VpcId: !ImportValue bgar-lab-vpc-id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 24.32.231.81/32
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 24.32.231.81/32
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: user
          Value: brandon.garcia.labs
        - Key: stelligent-u-lesson
          Value: '4.1'
        - Key: stelligent-u-lab
          Value: '4.1.1'
  PrivateEC2SCG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: bgar-stelu-l-415-private
      GroupDescription: 'bgar stelu sg'
      VpcId: !ImportValue bgar-lab-vpc-id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.0.0/24
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/24
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 10.0.0.0/24
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/24
      Tags: 
        - Key: user
          Value: brandon.garcia.labs
        - Key: stelligent-u-lesson
          Value: '4.1'
        - Key: stelligent-u-lab
          Value: '4.1.1'
Outputs:
  InstanceID:
    Description: ID of the instance
    Value: !Ref EC2Instance
  PrivateIP:
    Description: Private IP of the instance
    Value: !GetAtt EC2Instance.PrivateIp
